SERVER-58407 Retry on FailedToSatisfyReadPreference in resharding.

(cherry picked from commit 03bec439f7c1ce1d8242de40eea130d9a3518a28)